ingress/pod-service.yml


apiVersion: v1
kind: Pod

metadata:
  name: pod
  namespace: web
  labels:
    role: webapp

spec:
  containers:
    - name: web
      image: nginx:1.27
      imagePullPolicy: IfNotPresent
      ports:
        - containerPort: 80
      volumeMounts:
        - name: webmount
          mountPath: /usr/share/nginx/html
          readOnly: true

  volumes:
    - name: webmount
      configMap:
        name: ihtml

---

apiVersion: v1
kind: Service

metadata:
  name: service1
  namespace: web
  labels:
    role: webapp

spec:
  ports:
    - targetPort: 80
      port: 80
  selector:
    role: webapp
