ingress/gingess.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress-rules
  annotations:
    # Tells Kubernetes to use the NGINX Ingress Controller to process this
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
  - host: my-app.local  # Change this to your actual domain or local DNS name
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nginx-backend-svc
            port:
              number: 80
