ingress/ingress.yml

apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: i1
  namespace: web
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:
  rules:
    - host: web.test.com 
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service1
                port:
                  number: 80
